Fix description align

--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,9 @@ body {
   font-size: 2rem;
 }
 
-p {
+#description {
   font-size: 1.1rem;
+  text-align: center;
 }
 
 a {
